# Inventory-Distribution-Management-System

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_phase2_distribution_requests.py  74effeb1971b_add_name_column_to_agents.py  b2a126a30a14_add_agents_table.py  efc87e659e91_add_push_subscriptions_table.py
backend/app/: create_user.py  main.py  seed.py  seed_roles.py  seed_warehouses.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: auth.py  distribution.py  hubs.py  inventory.py  manufacturing.py  notifications.py  products.py  users.py  warehouses.py
backend/app/core/: config.py  enums.py  security.py
backend/app/models/: __init__.py  audit.py  inventory.py  mixins.py  notification.py  product.py  user.py
backend/app/repositories/: base.py
backend/app/schemas/: auth.py  common.py  distribution.py  hub.py  inventory.py  manufacturing.py  product.py  user.py  warehouse.py
backend/app/services/: audit_service.py  auth_service.py  distribution_service.py  hub_service.py  inventory_service.py  manufacturing_service.py  product_service.py  warehouse_service.py
backend/app/utils/: email.py  push_notifier.py
docs/: architecture.md  database-schema.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/public/: sw.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts
frontend/src/stores/: auth-store.ts
(+20 files in other folders)
